--- a/OOPP/OOPPChile.Rmd
+++ b/OOPP/OOPPChile.Rmd
@@ -1,30 +1,55 @@
 ---
 title: "Análisis Inversión Obras Públicas CHile"
-output: html_document
+output: github_document
 ---
 
 ```{r Opciones de Chunk, echo = FALSE}
-knitr::opts_chunk$set(warning = FALSE, message = FALSE)
+knitr::opts_chunk$set(warning = FALSE, message = FALSE, cache = TRUE)
 ```
 
+En este documento realizaremos un análisis de las inversiones realizadas por el *Ministerio de Obras Públicas de Chile* en el periodo 2011-2017.
+
+Primero cargamos las librerías que se utilizarán en este ejercicio.
+
 ```{r Cargar librerías}
-library(dplyr)
-library(ggplot2)
-library(ggridges)
-library(stringr)
-library(forcats)
-library(readxl)
-library(httr)
+library(dplyr) # manejo de datos
+library(ggplot2) # visualización
+library(ggridges) # más opciones de visualización
+library(stringr) # manejo de variables "character"
+library(forcats) # manejo de variables "factor"
+library(readxl) # leer Excel
+library(httr) # Leer info de internet
+library(tidytext) # Análisis de texto
+library(stopwords) # Complementaria a análisis de texto
+library(kableExtra) # tablas
 ```
+
+La informacióna utilizar está disponible en la web de datos abiertos del gobierno de Chile (http://datos.gob.cl) por lo que podemos acceder a esta a través de una URL. Luego de descargar los datos desde la web procedemos a cargar estos a nuestra sesión de R.
 
 ```{r Cargar datos}
 url <- "http://datos.gob.cl/dataset/104d1ebf-4d1b-4c3d-af9e-e85e5bbf1fc9/resource/3fe6aa75-b611-48bb-ae94-abf745bc0553/download/detalleinversionhistoricamop2011-2019.xlsx"
 GET(url, write_disk(tf <- tempfile(fileext = ".xlsx")))
 datos <- read_excel(tf)
+```
+
+Utilizando `head()` y `str()` podemos tener una primera impresión sobre los datos que acabamos de cargar.
+
+```{r}
+head(datos)
 
 str(datos)
-head(datos)
 ```
+
+Teniendo en cuenta las características de los datos haremos unas pequeñas modificaciones antes de avanzar:
+
+- Sacar la columna `BIP` que pareciera ser un identificador que no otorga mayor información
+- Cambiar los nombres de las variables para dejarlas en formato **sentence** (primer letra mayúscula y el resto minúscula) así como sacar caractéres especiales
+- Cambiar la variable `Inversion` de miles a millones de pesos
+- Modificar los valores de las columnas `Region`, `Provincia` y `Comuna` a formato **sentence**
+- Modificar los valores de la columna `Nombre` a minúscula
+- Modificar la columna `Region` de **character** a **factor**
+
+Todos estos cambios serán almacenados en un objeto llamado `df`.
 
 ```{r Preparar datos}
 df <- datos %>%
@@ -39,11 +64,14 @@ df <- datos %>%
     Inversion = `INVERSIÓN (MILES DE $ DE CADA AÑO)`
   ) %>% 
   mutate(Inversion = round(Inversion / 1000000, 1),
+         Region = str_to_sentence(Region),
          Provincia = str_to_sentence(Provincia),
-         Nombre = str_to_lower(Nombre),
          Comuna = str_to_sentence(Comuna),
+         Nombre = str_to_lower(Nombre),
          Region = as_factor(Region))
 ```
+
+Teniendo listos nuestros datos, procedemos a hacer un primer análisis del gasto en Obras Públicas a través de los años.
 
 ```{r Inversión por año}
 df %>% 
@@ -61,6 +89,10 @@ df %>%
   theme_minimal()
 ```
 
+Es posible observar que la inversión presenta una leve alza sostenida durante el periodo estudiado con un **peak** el año 2015 de casi 1.600 millones de pesos.
+
+Sumado a lo anterior, podemos ver como se comporta la inversión de obras públicas en términos de las regiones del país.
+
 ```{r Inversión por Región}
 df %>% 
   group_by(Region) %>% 
@@ -77,6 +109,8 @@ df %>%
   theme_minimal() +
   theme(axis.text.x = element_blank())
 ```
+
+Como podría de esperarse, la gran parte de la inversión de concentra en la región metropolitana (donde se encuentra la capital) seguida por la región de BioBío donde se encuentra la ciudad de Concepción (segunda ciudad más grande de Chile).
 
 ```{r Inversión por Año y Región}
 df %>% 
@@ -97,14 +131,61 @@ df %>%
         axis.text.y = element_blank())
 ```
 
+Al considerar ambas dimensiones (tiempo y regiones) vemos que -en general- la inversión se mantiene constante durante los años en la mayor parte de las regiones. Destacan el caso de la región metropolitana donde más bien pareciera haber una disminución del gasto en el tiempo.
+
+Teniendo una concepción general de como se comportó la inversión en Obras Públicas durante el periódo 2011-2017 procederemos a hacer un análisis de que tipo de proyectos son los que se han realizado. Para esto nos concentraremos en la columna `Nombre` que nos permitiría extraer un poco más de información sobre el tipo de inversión que se ha realizado.
+
+Para realizar este análisis lo primero que haremos es **tokenizar** la información disponible en `Nombre`, esto corresponde a separar las frases o conjuntos de palabra de cada proyecto de inversión dejando una observación (fila) para cada una de las palabras de cada valor en `Nombre` (por ej. una fila con valor de `Nombre` **Ampliación de calle** pasa a ser tres filas correspondientes a **Ampliación**, **de**, y **calle**).
 
 ```{r}
-df %>% 
-  mutate(
-    Anio = as_factor(Anio),
-    Servicio = as_factor(Servicio)
-  ) %>% 
-lm(Inversion ~ Anio + Region + Servicio, data = .) %>% 
-  summary()
+df_palabra <- df %>% 
+  unnest_tokens(palabra, Nombre)
+
+df_palabra %>% 
+  count(palabra, sort = TRUE) %>% 
+  top_n(10)
+```
+
+Al ver las 10 palabras más comunes nos encontramos con algunas que son informativas tales como **conservación** y **mejoramiento** mientas que otras no tanto **de** e **y**.
+
+Entonces, lo que haremos es hacer un poco de limpieza de la nueva columna `palabra` consistente en:
+- Eliminar puntuaciones de las palabras
+- Eliminar palabras que contengan número
+- Eliminar **stopwords** (ej. a, de, y, etc utilizando la librería `stopwords`)
+- Reemplazar letras con tíldes
+- Sacar otras palabras identificadas al analizar resultados
+- Eliminar toda palabra que tenga 2 o menos letras
+
+```{r}
+df_palabra <- df %>% 
+  unnest_tokens(palabra, Nombre) %>% 
+  mutate(palabra = str_replace(palabra, "[:punct:]", " "),
+         palabra = str_replace(palabra, "\\w*[0-9]+\\w*\\s*", " "),
+         palabra = stringi::stri_trans_general(palabra, "Latin-ASCII"),
+         nchar = nchar(palabra)) %>%
+  filter(!is.na(palabra) & 
+         !palabra %in% c("y", "yy", "i", "ii", "iii", "iv", "v", "vi", "vii", "viii", "ix", "x", "xi", "xii", "xiv", "", " ", "apr", "ano", "anos", "san"),
+         !palabra %in% stopwords(language = "es"),
+         nchar > 2)
+
+df_palabra %>% 
+  count(palabra, sort = TRUE) %>% 
+  top_n(10)
+```
+
+
+```{r}
+df_palabra %>% 
+  count(Region, palabra) %>% 
+  filter(n > 5) %>% 
+  group_by(Region) %>% 
+  top_n(10, n) %>% 
+  ungroup() %>% 
+  arrange(Region, -n) %>% 
+  mutate(orden = row_number()) %>% 
+  ggplot(aes(x = reorder(palabra, -orden), y = n)) +
+  geom_col() +
+  coord_flip() +
+  facet_wrap(~Region, scales = "free_y")
 ```
 
